--- a/Inverter/MainPage.xaml
+++ b/Inverter/MainPage.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Inverter.MainPage">
+             x:Class="Inverter.MainPage" >
 
     <Grid
         VerticalOptions="Center"
@@ -19,14 +19,14 @@
             VerticalOptions="Center"
             Padding="30"
             Spacing="25">
-            <Button Text="Sterowanie falą prostokątną" 
+            <Button Text="Wygeneruj Nowy Falownik" 
                     Grid.Column="0"
                     Grid.Row="0"
-                    Clicked="GoToRectangle"/>
-            <Button Text="Sterowanie PWM" 
+                    Clicked="CreateNewInverter"/>
+            <Button Text="konfiguracja" 
                     Grid.Column="0"
                     Grid.Row="1"
-                    Clicked="GoToPWM"/>
+                    Clicked="Configuration"/>
         </VerticalStackLayout>
     </Grid>
 
