--- a/Inverter/GenerateInverter/Views/GenerateInverterV.xaml
+++ b/Inverter/GenerateInverter/Views/GenerateInverterV.xaml
@@ -96,12 +96,12 @@
 
                 <!--<Label Grid.Row="7" Grid.Column="0" Grid.ColumnSpan="2" Text="Konfiguracja Print Tran:"/>-->
 
-                <TableView Grid.Row="4" Grid.ColumnSpan="5" Intent="Form">
+                <TableView Grid.Row="4" Grid.ColumnSpan="6" Intent="Form">
                     <TableRoot>
                         <TableSection Title="Dodaj Nowy Print Tran">
                             <ViewCell>
                                 <Grid 
-                                    ColumnDefinitions=".25*,.40*,auto"
+                                    ColumnDefinitions=".5*,*,auto"
                                     RowSpacing="5"
                                     ColumnSpacing="5"
                                     RowDefinitions="auto,auto,*">
@@ -109,9 +109,9 @@
                                     <Label Grid.Row="0" Grid.Column="1" Text="Nazwa Użytkownika"/>
 
                                     <Entry Grid.Column="0" Grid.Row="1" Text="{Binding InverterM.SingleDataNotify.DataName}"/>
-                                    <Entry Grid.Column="1" Grid.Row="1" Text="{Binding InverterM.SingleDataNotify.UserDataName}"/>
-                                    <Button Grid.Column="3" Grid.Row="1" Text="Dodaj" Command="{Binding InverterM.AddNewTranPrint}"/>
-                                    <Button Grid.Column="3" Grid.Row="2" HeightRequest="40" VerticalOptions="Start" Text="Usuń" 
+                                    <Entry Grid.Column="1"  Grid.Row="1" Text="{Binding InverterM.SingleDataNotify.UserDataName}"/>
+                                    <Button Grid.Column="2" Grid.Row="1" Text="Dodaj"  Command="{Binding InverterM.AddNewTranPrint}"/>
+                                    <Button Grid.Column="2" Grid.Row="2" HeightRequest="40" VerticalOptions="Start" Text="Usuń" 
                                             Command="{Binding InverterM.RemoveTranPrint}" IsEnabled="{Binding InverterM.IsSelectedDataNotify}"/>
                                     <ListView 
                                         MaximumHeightRequest="80" BackgroundColor="White" Grid.Row="2" Grid.ColumnSpan="2" 
@@ -121,7 +121,7 @@
                                                 <ViewCell>
                                                     <ScrollView>
                                                         <Grid 
-                                                            ColumnDefinitions="*,*"
+                                                            ColumnDefinitions=".5*,*"
                                                             ColumnSpacing="20">
                                                             <Label Grid.Column="0" Text="{Binding DataName}" TextColor="Black"/>
                                                             <Label Grid.Column="1" Text="{Binding UserDataName}" TextColor="Black"/>
@@ -142,9 +142,9 @@
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <Grid ColumnDefinitions="*,*">
-                                    <Label Grid.Column="0" Text="{Binding DataName}"/>
-                                    <Label Grid.Column="1" Text="{Binding UserDataName}"/>
+                                <Grid ColumnDefinitions="auto,auto" ColumnSpacing="5">
+                                    <Label Grid.Column="0" VerticalTextAlignment="Start" Text="{Binding DataName}"/>
+                                    <Label Grid.Column="1" VerticalTextAlignment="End" Text="{Binding UserDataName}"/>
                                 </Grid>
                             </ViewCell>
                         </DataTemplate>
