--- a/Inverter/GenerateInverter/Views/GenerateInverterV.xaml
+++ b/Inverter/GenerateInverter/Views/GenerateInverterV.xaml
@@ -39,19 +39,18 @@
                 >
                 <Label Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Text="Konfiguracja parametrów:"/>
 
-                <Label Grid.Row="1" Grid.Column="0" Text="Uz: "  TextColor="White"/>
-                <Label Grid.Row="2" Grid.Column="0" Text="Fo: " TextColor="White"/>
-                <Label Grid.Row="3" Grid.Column="0" Text="Ma: " TextColor="White"/>
-                <Label Grid.Row="4" Grid.Column="0" Text="R_on: " TextColor="White"/>
-                <Label Grid.Row="5" Grid.Column="0" Text="R_off: " TextColor="White"/>
-                <Label Grid.Row="6" Grid.Column="0" Text="Ro: " TextColor="White"/>
-                <Label Grid.Row="7" Grid.Column="0" Text="Lo: " TextColor="White"/>
-                <Label Grid.Row="8" Grid.Column="0" Text="Eo: " TextColor="White"/>
-                <Label Grid.Row="9" Grid.Column="0" Text="Fio: " TextColor="White"/>
-                <Label Grid.Row="10" Grid.Column="0" Text="Fi: " TextColor="White"/>
-                <Label Grid.Row="11" Grid.Column="0" Text="Alfa: " TextColor="White"/>
-                <Label Grid.Row="12" Grid.Column="0" Text="K: " TextColor="White"/>
-
+                <Label Grid.Row="1" Grid.Column="0" Text="Uz: "  TextColor="White" ToolTipProperties.Text="Napięcie zasilania falownika [V]"/>
+                <Label Grid.Row="2" Grid.Column="0" Text="Fo: " TextColor="White" ToolTipProperties.Text="Częstotliwość napięcia wyjściowego [Hz]"/>
+                <Label Grid.Row="3" Grid.Column="0" Text="Ma: " TextColor="White" ToolTipProperties.Text="Współczynik głębokości modulacji [-] (Ma&lt;1)"/>
+                <Label Grid.Row="4" Grid.Column="0" Text="R_on: " TextColor="White" ToolTipProperties.Text="Rezystancja stycznika w stanie załączenia [&#8486;]"/>
+                <Label Grid.Row="5" Grid.Column="0" Text="R_off: " TextColor="White" ToolTipProperties.Text="Rezystancja stycznika w stanie Wyłączenia [&#8486;]"/>
+                <Label Grid.Row="6" Grid.Column="0" Text="Ro: " TextColor="White" ToolTipProperties.Text="Rezystancja fazy odbiornika [&#8486;]"/>
+                <Label Grid.Row="7" Grid.Column="0" Text="Lo: " TextColor="White" ToolTipProperties.Text="Indukcyjność fazy odbiornika [H]"/>
+                <Label Grid.Row="8" Grid.Column="0" Text="Eo: " TextColor="White" ToolTipProperties.Text="Amplituda napięcia SEM fazy odbiornika [V]"/>
+                <Label Grid.Row="9" Grid.Column="0" Text="Fio: " TextColor="White" ToolTipProperties.Text="Przesunięcie fazowe SEM względem harmonicznej podstawowej fazy napięcia wyjściowego [deg]"/>
+                <Label Grid.Row="10" Grid.Column="0" Text="Fi: " TextColor="White" ToolTipProperties.Text="Częstotliwość przełączeń styczników [Hz]"/>
+                <Label Grid.Row="11" Grid.Column="0" Text="Alfa: " TextColor="White" ToolTipProperties.Text="Kąt przesunięcia załączenia tranzystorów [deg]"/>
+                <Label Grid.Row="12" Grid.Column="0" Text="K: " TextColor="White" ToolTipProperties.Text="Typ pracy falownika &#10;0-Fala&#10;prostokatna 1-PWM"/>
 
                 <Entry Grid.Row="1" Grid.Column="1" TextColor="Black" BackgroundColor="White" Text="{Binding InverterM.UzNotify}" Placeholder="{Binding InverterM.UzNotify}"/>
                 <Entry Grid.Row="2" Grid.Column="1" TextColor="Black" BackgroundColor="White" Text="{Binding InverterM.FoNotify}" Placeholder="{Binding InverterM.FoNotify}"/>
@@ -121,7 +120,7 @@
                                             Command="{Binding InverterM.RemoveTranPrint}" IsEnabled="{Binding InverterM.IsSelectedDataNotify}"/>
                                     <ListView 
                                         MaximumHeightRequest="80" BackgroundColor="White" Grid.Row="2" Grid.ColumnSpan="2" 
-                                        ItemsSource="{Binding InverterM.DataNotify}" SelectedItem="{Binding InverterM.SelectedDataNotify}">
+                                        ItemsSource="{Binding InverterM.DataNotify}" SelectedItem="{Binding InverterM.SelectedDataNotify}" SeparatorColor="Red">
                                         <ListView.ItemTemplate>
                                             <DataTemplate>
                                                 <ViewCell>
