--- a/Inverter/Display/Views/DisplayV.xaml
+++ b/Inverter/Display/Views/DisplayV.xaml
@@ -14,7 +14,7 @@
 
     <ScrollView>
         <Grid 
-                ColumnDefinitions="*,*" ColumnSpacing="10"
+                ColumnDefinitions="*,.8*" ColumnSpacing="10"
                 RowDefinitions="auto,300,auto,*" RowSpacing="10">
             <!--Konfiguracja-->
             <Label FontSize="Title" HorizontalOptions="Center" Text="Konfiguracja" Grid.Row="0" Grid.Column="0"/>
@@ -39,13 +39,9 @@
                     </ListView.ItemTemplate>
                 </ListView>
             </Grid>
-            
-
-
-
 
             <ContentView Grid.Row="1" Grid.Column="0" >
-                <Grid     ColumnDefinitions="*,*,*,*,*,*,*" ColumnSpacing="10"
+                <Grid     ColumnDefinitions="0.5*,*,*,0.5*,0.5*,0.7*,0.5*" ColumnSpacing="5"
                           RowDefinitions="auto,*,auto,auto,auto,auto,auto">
                     <!--Edycja-->
                     <Label Grid.Row="2" Grid.ColumnSpan="8"  HorizontalOptions="Center" Text="Edycja" Margin="0,5,0,5"/>
@@ -70,7 +66,7 @@
                     <Editor Grid.Row="3" Grid.Column="4" ToolTipProperties.Text="Numer wiersza gdzie wyświetli się wykres&#10;(wiersze są liczone od góry)" Text="{Binding DataGraphUpdateItem.LocationRow}"  Placeholder="Wiersz" HorizontalOptions="Center" Keyboard="Numeric" />
                     <Editor Grid.Row="3" Grid.Column="5" ToolTipProperties.Text="Ilość wierszy które będzie zajmować wykres&#10;(wiersze są liczone od góry)" Text="{Binding DataGraphUpdateItem.locationRowSpan}"  Placeholder="Rozpiętość wierszy" HorizontalOptions="Center" Keyboard="Numeric" />
                     <CheckBox Grid.Row="3" Grid.Column="6" ToolTipProperties.Text="Czy wykres jest widoczny"  IsChecked="{Binding DataGraphUpdateItem.Visible}" HorizontalOptions="Center"/>
-                    <Button Grid.Row="4" Grid.ColumnSpan="7" ToolTipProperties.Text="Zapisz ustawienia i odśwież osie"  Clicked="UpdateRow_Clicked" Command="{Binding UpdateRowCommand}" HorizontalOptions="Center" Text="Aktualizuj" Margin="0,5,0,0"/>
+                    <Button Grid.Row="4" Grid.ColumnSpan="7" ToolTipProperties.Text="Zapisz ustawienia i odśwież osie" ZIndex="10"  Clicked="UpdateRow_Clicked" Command="{Binding UpdateRowCommand}" HorizontalOptions="Center" Text="Aktualizuj" Margin="0,5,0,0"/>
 
                     <Label Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" TextColor="White" Text="{Binding MaxMinValue}"/>
 
@@ -80,30 +76,30 @@
                         <ListView.Header>
                             <StackLayout>
                                 <Grid
-                                    ColumnDefinitions="*,*,*,*,*,*,*" ColumnSpacing="10"
+                                    ColumnDefinitions="0.5*,*,*,0.5*,0.5*,0.7*,0.5*" ColumnSpacing="5"
                                         RowDefinitions="*" RowSpacing="10">
-                                    <Label Grid.Row="0" Grid.Column="0" Text="ID" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="1" Text="Nazwa" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="2" Text="Color" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="3" Text="Skala" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="4" Text="Wiersz" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="5" Text="Rozpiętość&#10;Wierszy" HorizontalOptions="Center" />
-                                    <Label Grid.Row="0" Grid.Column="6" Text="Widoczny" HorizontalOptions="Center"/>
+                                    <Label Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" Text="ID" />
+                                    <Label Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" Text="Nazwa"/>
+                                    <Label Grid.Row="0" Grid.Column="2" HorizontalOptions="Start" Text="Color"/>
+                                    <Label Grid.Row="0" Grid.Column="3" HorizontalOptions="Center" Text="Skala"/>
+                                    <Label Grid.Row="0" Grid.Column="4" HorizontalOptions="Center" Text="Wiersz"/>
+                                    <Label Grid.Row="0" Grid.Column="5" HorizontalOptions="Center" Text="Rozpiętość&#10;Wierszy" />
+                                    <Label Grid.Row="0" Grid.Column="6" HorizontalOptions="Center" Text="Widoczny"/>
                                 </Grid>
                             </StackLayout>
                         </ListView.Header>
                         <ListView.Footer>
                             <StackLayout>
                                 <Grid
-                                    ColumnDefinitions="*,*,*,*,*,*,*" ColumnSpacing="10"
+                                    ColumnDefinitions="0.5*,*,*,0.5*,0.5*,0.7*,0.5*" ColumnSpacing="10"
                                      RowDefinitions="*" RowSpacing="10">
-                                    <Label Grid.Row="0" Grid.Column="0" Text="ID" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="1" Text="Nazwa" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="2" Text="Color" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="3" Text="Skala" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="4" Text="Wiersz" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="5" Text="Rozpiętość&#10;Wierszy" HorizontalOptions="Center"/>
-                                    <Label Grid.Row="0" Grid.Column="6" Text="Widoczny" HorizontalOptions="Center"/>
+                                    <Label Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" Text="ID" />
+                                    <Label Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" Text="Nazwa"/>
+                                    <Label Grid.Row="0" Grid.Column="2" HorizontalOptions="Start" Text="Color"/>
+                                    <Label Grid.Row="0" Grid.Column="3" HorizontalOptions="Center" Text="Skala"/>
+                                    <Label Grid.Row="0" Grid.Column="4" HorizontalOptions="Center" Text="Wiersz"/>
+                                    <Label Grid.Row="0" Grid.Column="5" HorizontalOptions="Center" Text="Rozpiętość&#10;Wierszy" />
+                                    <Label Grid.Row="0" Grid.Column="6" HorizontalOptions="Center" Text="Widoczny"/>
                                 </Grid>
                             </StackLayout>
                         </ListView.Footer>
@@ -111,17 +107,17 @@
                             <DataTemplate>
                                 <ViewCell>
                                     <Grid
-                                       ColumnDefinitions="*,*,*,*,*,*,*" ColumnSpacing="10"
+                                       ColumnDefinitions="0.5*,*,*,0.5*,0.5*,0.7*,0.5*" ColumnSpacing="10"
                                         RowDefinitions="*" RowSpacing="10">
                                         <Label  Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" Text="{Binding DataName}"/>
                                         <Label Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" Text="{Binding UserDataName}"/>
-                                        <Grid Grid.Row="0" Grid.Column="2" HorizontalOptions="Center" 
+                                        <Grid Grid.Row="0" Grid.Column="2" 
                                              RowDefinitions="auto" ColumnDefinitions="5,auto" ColumnSpacing="5" >
                                             <BoxView Grid.Row="0" Grid.Column="0" Color="{Binding UserColor.Color}"/>
                                             <Label Grid.Row="0" Grid.Column="1" Text="{Binding UserColor.FriendlyName}"/>
                                         </Grid>
                                         <Label Grid.Row="0" Grid.Column="3" HorizontalOptions="End" Text="{Binding Multiplier}"/>
-                                        <Label Grid.Row="0" Grid.Column="4" HorizontalOptions="End" Text="{Binding LocationRow}"/>
+                                        <Label Grid.Row="0" Grid.Column="4" HorizontalOptions="End"  Text="{Binding LocationRow}"/>
                                         <Label Grid.Row="0" Grid.Column="5" HorizontalOptions="End" Text="{Binding locationRowSpan}"/>
                                         <CheckBox Grid.Row="0" Grid.Column="6" HorizontalOptions="End" IsChecked="{Binding Visible}" IsEnabled="False"/>
                                     </Grid>
